feat: add displayName as a field param to the request payload of the register request
